# payloadcms-auth-service

./: pyproject.toml
server/: config.py  main.py
